--- a/public/admin/assets/css/style.css
+++ b/public/admin/assets/css/style.css
@@ -1,6 +1,6 @@
 
         :root {
-            --primary-color: #1d1c1c;
+            --primary-color: black;
             --accent-color: #ffd66b;
             --light-gray: #f8f9fa;
             --dark-gray: #6c757d;
